# axum-notification-test

./: .gitignore  Cargo.toml  README.md
src/: index.html  index.js  main.rs  manifest.json  service_worker.js
